# drf_hw

./: README.md  data.json  docker-compose.yaml  pyproject.toml  requirements.txt
Docker/: Dockerfile
config/: celery.py  settings.py  urls.py
course/: models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_payments.py  0003_subscription.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py
